[gd_scene load_steps=12 format=3 uid="uid://btkb0k11edehh"]

[ext_resource type="Texture2D" uid="uid://b8cw22wkod62f" path="res://assets/characters/Orc.png" id="1_88emq"]
[ext_resource type="Script" path="res://scripts/orc.gd" id="1_vyblp"]

[sub_resource type="Animation" id="Animation_diurb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_nmddy"]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_pem3f"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_njdmf"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_k4ikg"]
resource_name = "walk"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(0, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pr413"]
_data = {
"RESET": SubResource("Animation_diurb"),
"dead": SubResource("Animation_nmddy"),
"hurt": SubResource("Animation_pem3f"),
"idle": SubResource("Animation_njdmf"),
"walk": SubResource("Animation_k4ikg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ucun6"]
radius = 70.5018

[sub_resource type="RectangleShape2D" id="RectangleShape2D_susyn"]
size = Vector2(17, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44wie"]
size = Vector2(14, 12)

[node name="Orc" type="CharacterBody2D"]
script = ExtResource("1_vyblp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 1)
texture = ExtResource("1_88emq")
hframes = 8
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pr413")
}

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-6.5, 2.5)
shape = SubResource("CircleShape2D_ucun6")

[node name="colision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="colision"]
visible = false
position = Vector2(-1.5, 2)
shape = SubResource("RectangleShape2D_susyn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_44wie")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="colision" to="." method="kill"]
